--- a/templates/base.html
+++ b/templates/base.html
@@ -12,37 +12,39 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Trading Dashboard</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard Overview</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('main.analyzer_workspace') }}">Analyzer Workspace</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Alerts / Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Admin Tools</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Strategy Insights</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Trading Dashboard</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="{{ url_for('main.dashboard') }}">Dashboard Overview</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('main.analyzer_workspace') }}">Analyzer Workspace</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Alerts / Events</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Admin Tools</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Strategy Insights</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
   <div class="container mt-4">{% block content %}{% endblock %}</div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
